refactor: fix SonarQube security, reliability and maintainability issues
- Externalize POSTGRES_PASSWORD and JWT_SECRET_KEY to env variables
- Restrict CORS origins via CORS_ALLOWED_ORIGINS and add JWT length check
- Introduce ObservationDto and ObservationUpdateRequest to prevent entity leaks
- Fix User.getUsername() bug and set Observation timestamp to UTC
- Convert RegisterRequest to Record and remove wildcard ResponseEntity<?>
- Replace System.err with SLF4J logging and handle empty catch blocks
- Modernize JwtService using Instant/Clock and add TokenRefreshException
- Upgrade test suite with @MockitoBean and clean up unused throws Exception
- Replace File.mkdirs() with Files.createDirectories() and add ownership checks